home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      hostNetwork: true
      containers:
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant:stable
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 8123
        livenessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 6
          timeoutSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 5
          timeoutSeconds: 10
        volumeMounts:
        - name: data-volume
          mountPath: /config
        - name: music-volume
          mountPath: /config/www/media
        - name: dev-usb0
          mountPath: /dev/ttyACM0
        - name: dev-ama0
          mountPath: /dev/ttyAMA0
        - name: tz-config
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: pvc-home-assistant
      - name: music-volume
        hostPath:
          path: /home/pi/Music
      - name: dev-usb0
        hostPath:
          path: /dev/ttyACM0
      - name: dev-ama0
        hostPath:
          path: /dev/ttyAMA0
      - name: tz-config
        hostPath:
          path: /etc/localtime
