home-assistant/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant
  externalTrafficPolicy: Local
  ports:
  - name: ha
    port: 80
    protocol: TCP
    targetPort: 8123
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-nodeport
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant
  type: NodePort
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
      nodePort: 31123
